<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".landing.MainActivity">

    <Button
            android:text="@string/continue_game"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:enabled="false"
            android:id="@+id/button_continue" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="24dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/new_game"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_new_game" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/button_continue" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_logo" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent" android:textSize="24sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>