<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".game.transaction.TransactionActivity">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:imeOptions="actionDone"
            android:id="@+id/input_transaction_value" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintTop_toBottomOf="@+id/text_player_name"
            android:layout_marginTop="16dp"/>
    <Button
            android:text="@string/credit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_credit" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/button_debit"
            app:layout_constraintHorizontal_chainStyle="spread" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/input_transaction_value"/>
    <Button
            android:text="@string/debit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_debit" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toEndOf="@+id/button_credit" app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/input_transaction_value"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/transfer_value_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/button_credit" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/text_player_name" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" tools:text="Jogador: Azul" android:textSize="18sp"/>
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/other_players_recycler" android:clipToPadding="false" android:paddingBottom="24dp"
            tools:listitem="@layout/line_view_player_selection"/>
</androidx.constraintlayout.widget.ConstraintLayout>